# BE/src/main/java/fpt/qn/pms/comment/dto/UpdateCommentRequest.java
@@ -1,0 +1,14 @@
+package fpt.qn.pms.comment.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.AccessLevel;
+import lombok.Data;
+import lombok.experimental.FieldDefaults;
+
+@Data
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class UpdateCommentRequest {
+
+    @NotBlank(message = "Content is required")
+    String content;
+}
